--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dataprep>=0.2.3
 DateTime>=4.3
 Flask>=1.1.1
 Flask-SQLAlchemy==2.4.1
-gunicorn==20.0.4
+gunicorn>=20.0.4
 gensim>=3.8.3
 itsdangerous>=1.1.0
 Jinja2>=2.11.1
